--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="#333333"
-    app:cardCornerRadius="20dp">
 
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="#333333"
-    android:layout_margin="10dp"
-    >
+    android:backgroundTint="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="40dp"
         android:backgroundTint="#E9DCFD"
-        app:cardElevation="20dp">
+        android:layout_margin="20dp"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="10dp"
+
+            android:id="@+id/llNote"
             >
 
             <TextView
@@ -59,13 +54,10 @@
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
 
-                android:id="@+id/txtLayoutContent"
-                ></TextView>
+                android:id="@+id/txtLayoutContent" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
-
-</androidx.cardview.widget.CardView>
